[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/interactive_element/bitmap.png" type="Texture" id=1]
[ext_resource path="res://addons/interactive_element/interactive_display.gd" type="Script" id=2]
[ext_resource path="res://resources/ui/interatctable_info_display_panel.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/1x/locked.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/ComicNeue-Angular/ComicNeueAngular-BoldItalic.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="interactive_display" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )

[node name="crosshair" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 256, 256 )
texture = ExtResource( 1 )

[node name="display" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 325
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelContainer" type="PanelContainer" parent="display"]
margin_left = 865.0
margin_top = 625.0
margin_right = 1054.0
margin_bottom = 779.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="display/PanelContainer"]
margin_right = 189.0
margin_bottom = 154.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="info_control" type="VBoxContainer" parent="display/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 169.0
margin_bottom = 134.0

[node name="interactable" type="HBoxContainer" parent="display/PanelContainer/MarginContainer/info_control"]
margin_right = 149.0
margin_bottom = 51.0
size_flags_horizontal = 4

[node name="status_icon" type="TextureRect" parent="display/PanelContainer/MarginContainer/info_control/interactable"]
unique_name_in_owner = true
margin_right = 50.0
margin_bottom = 51.0
texture = ExtResource( 4 )

[node name="element_name" type="Label" parent="display/PanelContainer/MarginContainer/info_control/interactable"]
unique_name_in_owner = true
margin_left = 54.0
margin_right = 149.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "text"

[node name="HSeparator" type="HSeparator" parent="display/PanelContainer/MarginContainer/info_control"]
margin_top = 55.0
margin_right = 149.0
margin_bottom = 59.0

[node name="action" type="HBoxContainer" parent="display/PanelContainer/MarginContainer/info_control"]
margin_top = 63.0
margin_right = 149.0
margin_bottom = 114.0
size_flags_horizontal = 4

[node name="action_icon" type="TextureRect" parent="display/PanelContainer/MarginContainer/info_control/action"]
unique_name_in_owner = true
margin_right = 50.0
margin_bottom = 51.0
texture = ExtResource( 4 )

[node name="action_name" type="Label" parent="display/PanelContainer/MarginContainer/info_control/action"]
unique_name_in_owner = true
margin_left = 54.0
margin_right = 149.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "text"
